# 2020covid19

./: README.md  SIR Fits.ipynb  comparisons.ipynb  pyproject.toml
covid_analysis/: models.py  utility.py
covid_tracking_data/: collector.py
data/: nst-est2019-01.csv  total-cases-covid-19.csv  total-daily-covid-deaths.csv
ourworldindata_org/: collector.py
